PR31191, objcopy leaves temporary files

Fix the ENOTDIR rmdir too.

	PR 31191
	* objcopy.c (copy_archive): Localise uses of "l".  Remove
	const from name_list.name.  Unlink output element on bfd_close
	error, and NULL list->name to indicate file is removed.  Adjust
	cleanup to prevent rmdir on non-existent file.